upload images for announcements. update shop cart icon

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       <a class="logo" href="#"><strong>CHEAPESTORE</strong></a>
       <input class="look-for" type="text" placeholder="Look for product, brand, category...">
       <button class="custom-btn">Login</button>
-      <button href="" class="btn cart-btn"><i class="bi bi-cart" alt="shopping-cart-logo"
-          ></i></button>
+      <button href="" class="btn cart-btn"><i class="bi bi-cart" alt="shopping-cart-logo"></i></button>
     </div>
     <nav>
       <ul>
@@ -230,13 +229,13 @@
       <section class="methods">
         <article class="methods__payment">
           <p>Payment Methods</p>
-          <img src="./images/visa.svg" alt="visa" style="width: 80px;">
-          <img src="./images/mercado-pago.svg" alt="mercado-pago" style="width: 120px;">
+          <img src="./images/visa.svg" alt="visa" class="methods-visa">
+          <img src="./images/mercado-pago.svg" alt="mercado-pago" class="methods-mercadopago">
         </article>
         <br>
         <article class="methods_shipping">
           <p>Shipping</p>
-          <img src="./images/correo-argentino.png" alt="correo-argentino" style="width: 110px;">
+          <img src="./images/correo-argentino.png" alt="correo-argentino" class="methods-correo">
         </article>
       </section>
       <section class="social">
