--- a/pages/men.html
+++ b/pages/men.html
@@ -23,9 +23,7 @@
       <a class="logo" href="../index.html"><strong>CHEAPESTORE</strong></a>
       <input class="look-for" type="text" placeholder="Look for product, brand, category...">
       <button class="custom-btn">Login</button>
-      <button>
-        <i class="bi bi-cart" alt="shopping-cart-logo" height="12"></i>
-      </button>
+      <button href="" class="btn cart-btn"><i class="bi bi-cart" alt="shopping-cart-logo"></i></button>
     </div>
     <nav>
       <ul>
@@ -38,109 +36,69 @@
     </nav>
   </header>
   <h1 class="clipped">Cheapestore</h1>
-  <section class="banner"></section>
+
   <main class="container">
-    <h2 class="title">MEN</h2>
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
+    <section class="announcements">
+      <img src="../images/black-friday-2.jpg" alt="black-friday">
+    </section>
     <section class="swiper mySwiper">
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
       <div class="swiper-wrapper">
         <article class="swiper-slide">
           <img class="swiper-image" src="../images/men/black-white-stripes.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
-            <div>
-              <h3>Black & White Stripes Shirt</h3>
-            </div>
-            <div>
-              <p>$300</p>
-            </div>
-            <div>
-              <p>3 interest-free fees of $300</p>
-            </div>
+            <h3>Black & White Stripes Shirt</h3>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
           </div>
         </article>
         <article class="swiper-slide">
           <img class="swiper-image" src="../images/men/black-shoes.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
-            <div>
-              <h3>Black Leather's Classic Chelsea Boot</h3>
-            </div>
-            <div>
-              <p>$300</p>
-            </div>
-            <div>
-              <p>3 interest-free fees of $300</p>
-            </div>
+            <h3>Black Leather's Classic Chelsea Boot</h3>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
           </div>
         </article>
         <article class="swiper-slide">
           <img class="swiper-image" src="../images/men/brooklyn-jacket.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
-            <div>
-              <h3>Classic Brooklyn Red Jacket</h3>
-            </div>
-            <div>
-              <p>$300</p>
-            </div>
-            <div>
-              <p>3 interest-free fees of $300</p>
-            </div>
+            <h3>Classic Brooklyn Red Jacket</h3>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
           </div>
         </article>
         <article class="swiper-slide">
           <img class="swiper-image" src="../images/men/short-shirt.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
-            <div>
-              <h3>Regular Fit Ellerslie Linen Shirt</h3>
-            </div>
-            <div>
-              <p>$300</p>
-            </div>
-            <div>
-              <p>3 interest-free fees of $300</p>
-            </div>
+            <h3>Regular Fit Ellerslie Linen Shirt</h3>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
           </div>
         </article>
         <article class="swiper-slide">
           <img class="swiper-image" src="../images/men/squared-coat.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
-            <div>
-              <h3>Orange Stripe's Squared Coat</h3>
-            </div>
-            <div>
-              <p>$300</p>
-            </div>
-            <div>
-              <p>3 interest-free fees of $300</p>
-            </div>
+            <h3>Orange Stripe's Squared Coat</h3>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
           </div>
         </article>
         <article class="swiper-slide">
           <img class="swiper-image" src="../images/men/squared-shirt.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
-            <div>
-              <h3>GG Marmont reversible belt</h3>
-            </div>
-            <div>
-              <p>$300</p>
-            </div>
-            <div>
-              <p>3 interest-free fees of $300</p>
-            </div>
+            <h3>GG Marmont reversible belt</h3>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
           </div>
         </article>
         <article class="swiper-slide">
           <img class="swiper-image" src="../images/men/casual-white-sweater.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
-            <div>
-              <h3>Casual White Sweater</h3>
-            </div>
-            <div>
-              <p>$300</p>
-            </div>
-            <div>
-              <p>3 interest-free fees of $300</p>
-            </div>
+            <h3>Casual White Sweater</h3>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
           </div>
         </article>
       </div>
@@ -168,33 +126,26 @@
       </div>
     </section>
     <section class="announcements">
-      <div class="announcements__item">
-        <h3>6 interest-free fees</h3>
-        <h3>All banks</h3>
-      </div>
-      <div class="announcements__item">
-        <h3>Shipping all over the country</h3>
-        <h3>Calculate your shipment!</h3>
-      </div>
+      <img src="../images/black-friday.jpg" alt="black-friday">
     </section>
   </main>
   <footer class="footer">
     <div class="footer__info">
       <section class="methods">
         <article class="methods__payment">
-          <h3>Payment Methods</h3>
-          <img src="../images/visa.svg" alt="visa" style="width: 80px;">
-          <img src="../images/mercado-pago.svg" alt="mercado-pago" style="width: 120px;">
+          <p>Payment Methods</p>
+          <img src="../images/visa.svg" alt="visa" class="methods-visa">
+          <img src="../images/mercado-pago.svg" alt="mercado-pago" class="methods-mercadopago">
         </article>
         <br>
         <article class="methods_shipping">
-          <h3>Shipping</h3>
-          <img src="../images/correo-argentino.png" alt="correo-argentino"  style="width: 110px;">
+          <p>Shipping</p>
+          <img src="../images/correo-argentino.png" alt="correo-argentino" class="methods-correo">
         </article>
       </section>
       <section class="social">
-        <i class="bi bi-instagram social-item" style="font-size:30px"></i>
-        <i class="bi bi-facebook social-item" style="font-size:30px"></i>
+        <a href=""><i class="bi bi-instagram social-item"></i></a>
+        <a href=""><i class="bi bi-facebook social-item"></i></a>
       </section>
     </div>
     <section class="footer__copyright">
