--- a/pages/offers.html
+++ b/pages/offers.html
@@ -21,9 +21,7 @@
       <a class="logo" href="../index.html"><strong>CHEAPESTORE</strong></a>
       <input class="look-for" type="text" placeholder="Look for product, brand, category...">
       <button class="custom-btn">Login</button>
-      <button>
-        <i class="bi bi-cart" alt="shopping-cart-logo" height="12"></i>
-      </button>
+      <button href="" class="btn cart-btn"><i class="bi bi-cart" alt="shopping-cart-logo"></i></button>
     </div>
     <nav>
       <ul>
@@ -41,8 +39,11 @@
     <section class="legend">
       <h2 class="title">BESTSELLERS FROM $9.99</h2>
       <h3>Refresh your <strong>daily rotation</strong> with our women's clothing range.</h3>
-      <p>With the freshest styles available all in one place, you can expect everyday basics, like <strong>women's tops and skirts</strong>, as well as must-have <strong>knitwear and cozy loungewear</strong> for downtime days.</p>  
-      <h3>Plans to go out?</h3><p>Our women's dresses line up mini, midi and maxi styles that were made for <strong>summer evenings</strong>, while our stylish jeans and pants offer something to flatter</p>
+      <p>With the freshest styles available all in one place, you can expect everyday basics, like <strong>women's tops
+          and skirts</strong>, as well as must-have <strong>knitwear and cozy loungewear</strong> for downtime days.</p>
+      <h3>Plans to go out?</h3>
+      <p>Our women's dresses line up mini, midi and maxi styles that were made for <strong>summer evenings</strong>,
+        while our stylish jeans and pants offer something to flatter</p>
     </section>
     <section class="offers">
       <div class="row">
@@ -151,11 +152,12 @@
       </div>
 
       <section class="legend">
-        <h3>Discover our <strong>Sales & Offers</strong> across all departments</h3><p>From men' <strong>shoes</strong> to women's <strong>coats</strong>.</p> 
-        <h3>Discover what <strong>savings</strong> you can make!</h3><p>There's never been a better time to step out in style thanks to our <strong>clothing sale</strong>.</p> 
+        <h3>Discover our <strong>Sales & Offers</strong> across all departments</h3>
+        <p>From men' <strong>shoes</strong> to women's <strong>coats</strong>.</p>
+        <h3>Discover what <strong>savings</strong> you can make!</h3>
+        <p>There's never been a better time to step out in style thanks to our <strong>clothing sale</strong>.</p>
         <p>Our clothing sale includes <strong>2022's biggest trends for women & men</strong>.</p>
       </section>
-
 
       <div class="row">
         <div class="col-lg-4 col-md-12 mb-4">
@@ -172,8 +174,6 @@
             </div>
           </article>
         </div>
-
-
 
         <div class="col-lg-4 col-md-6 mb-4">
           <article class="card custom-card" style="max-height: 480px;">
@@ -271,19 +271,19 @@
     <div class="footer__info">
       <section class="methods">
         <article class="methods__payment">
-          <h3>Payment Methods</h3>
-          <img src="../images/visa.svg" alt="visa" style="width: 80px;">
-          <img src="../images/mercado-pago.svg" alt="mercado-pago" style="width: 120px;">
+          <p>Payment Methods</p>
+          <img src="../images/visa.svg" alt="visa" class="methods-visa">
+          <img src="../images/mercado-pago.svg" alt="mercado-pago" class="methods-mercadopago">
         </article>
         <br>
         <article class="methods_shipping">
-          <h3>Shipping</h3>
-          <img src="../images/correo-argentino.png" alt="correo-argentino"  style="width: 110px;">
+          <p>Shipping</p>
+          <img src="../images/correo-argentino.png" alt="correo-argentino" class="methods-correo">
         </article>
       </section>
       <section class="social">
-        <i class="bi bi-instagram social-item" style="font-size:30px"></i>
-        <i class="bi bi-facebook social-item" style="font-size:30px"></i>
+        <a href=""><i class="bi bi-instagram social-item"></i></a>
+        <a href=""><i class="bi bi-facebook social-item"></i></a>
       </section>
     </div>
     <section class="footer__copyright">
