--- a/pages/women.html
+++ b/pages/women.html
@@ -23,9 +23,7 @@
       <a class="logo" href="../index.html"><strong>CHEAPESTORE</strong></a>
       <input class="look-for" type="text" placeholder="Look for product, brand, category...">
       <button class="custom-btn">Login</button>
-      <button>
-        <i class="bi bi-cart" alt="shopping-cart-logo" height="12"></i>
-      </button>
+      <button href="" class="btn cart-btn"><i class="bi bi-cart" alt="shopping-cart-logo"></i></button>
     </div>
     <nav>
       <ul>
@@ -40,107 +38,67 @@
   <h1 class="clipped">Cheapestore</h1>
   <section class="banner"></section>
   <main class="container">
-    <h2 class="title">WOMEN</h2>
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
+    <section class="announcements">
+      <img src="../images/black-friday-2.jpg" alt="black-friday">
+    </section>
     <section class="swiper mySwiper">
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
       <div class="swiper-wrapper">
         <article class="swiper-slide custom-card">
           <img class="swiper-image" src="../images/women/brown-outfit.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
-            <div>
-              <h3>Mid Season Brown Set</h3>
-            </div>
-            <div>
-              <p>$300</p>
-            </div>
-            <div>
-              <p>3 interest-free fees of $300</p>
-            </div>
+            <h3>Mid Season Brown Set</h3>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
           </div>
         </article>
         <article class="swiper-slide custom-card">
           <img class="swiper-image" src="../images/women/gardener-clothes.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
-            <div>
-              <h3>Vintage Blue Pocket Overall</h3>
-            </div>
-            <div>
-              <p>$300</p>
-            </div>
-            <div>
-              <p>3 interest-free fees of $300</p>
-            </div>
+            <h3>Vintage Blue Pocket Overall</h3>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
           </div>
         </article>
         <article class="swiper-slide custom-card">
           <img class="swiper-image" src="../images/women/jean.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
-            <div>
-              <h3>Jeans In Mid Blue With Rips</h3>
-            </div>
-            <div>
-              <p>$300</p>
-            </div>
-            <div>
-              <p>3 interest-free fees of $300</p>
-            </div>
+            <h3>Jeans In Mid Blue With Rips</h3>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
           </div>
         </article>
         <article class="swiper-slide custom-card">
           <img class="swiper-image" src="../images/women/knotted-shirt.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
-            <div>
-              <h3>Striped Print T-Shirt</h3>
-            </div>
-            <div>
-              <p>$300</p>
-            </div>
-            <div>
-              <p>3 interest-free fees of $300</p>
-            </div>
+            <h3>Striped Print T-Shirt</h3>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
           </div>
         </article>
         <article class="swiper-slide custom-card">
           <img class="swiper-image" src="../images/women/modern-jean.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
-            <div>
-              <h3>Jeans In Vintage Mid Blue</h3>
-            </div>
-            <div>
-              <p>$300</p>
-            </div>
-            <div>
-              <p>3 interest-free fees of $300</p>
-            </div>
+            <h3>Jeans In Vintage Mid Blue</h3>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
           </div>
         </article>
         <article class="swiper-slide custom-card">
           <img class="swiper-image" src="../images/women/short.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
-            <div>
-              <h3>Waisted Smokin' Short Fray</h3>
-            </div>
-            <div>
-              <p>$300</p>
-            </div>
-            <div>
-              <p>3 interest-free fees of $300</p>
-            </div>
+            <h3>Waisted Smokin' Short Fray</h3>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
           </div>
         </article>
         <article class="swiper-slide custom-card">
           <img class="swiper-image" src="../images/women/faux-fur-scarf.jpg" alt="offer-mockup-1">
           <div class="swiper-description">
-            <div>
-              <h3>Faux Fur Scarf</h3>
-            </div>
-            <div>
-              <p>$300</p>
-            </div>
-            <div>
-              <p>3 interest-free fees of $300</p>
-            </div>
+            <h3>Faux Fur Scarf</h3>
+            <p>$300</p>
+            <p>3 interest-free fees of $300</p>
           </div>
         </article>
       </div>
@@ -168,33 +126,26 @@
       </div>
     </section>
     <section class="announcements">
-      <div class="announcements__item announcements__item-first">
-        <h3>6 interest-free fees</h3>
-        <h3>All banks</h3>
-      </div>
-      <div class="announcements__item announcements__item-second">
-        <h3>Shipping all over the country</h3>
-        <h3>Calculate your shipment!</h3>
-      </div>
+      <img src="../images/black-friday.jpg" alt="black-friday">
     </section>
   </main>
   <footer class="footer">
     <div class="footer__info">
       <section class="methods">
         <article class="methods__payment">
-          <h3>Payment Methods</h3>
-          <img src="../images/visa.svg" alt="visa" style="width: 80px;">
-          <img src="../images/mercado-pago.svg" alt="mercado-pago" style="width: 120px;">
+          <p>Payment Methods</p>
+          <img src="../images/visa.svg" alt="visa" class="methods-visa">
+          <img src="../images/mercado-pago.svg" alt="mercado-pago" class="methods-mercadopago">
         </article>
         <br>
         <article class="methods_shipping">
-          <h3>Shipping</h3>
-          <img src="../images/correo-argentino.png" alt="correo-argentino"  style="width: 110px;">
+          <p>Shipping</p>
+          <img src="../images/correo-argentino.png" alt="correo-argentino" class="methods-correo">
         </article>
       </section>
       <section class="social">
-        <i class="bi bi-instagram social-item" style="font-size:30px"></i>
-        <i class="bi bi-facebook social-item" style="font-size:30px"></i>
+        <a href=""><i class="bi bi-instagram social-item"></i></a>
+        <a href=""><i class="bi bi-facebook social-item"></i></a>
       </section>
     </div>
     <section class="footer__copyright">
