update categories names. update styling in buttons

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                   <span class="badge bg-success ms-2">Eco</span><span class="badge bg-danger ms-2">-10%</span>
                 </h5>
                 <h5 class="card-title mb-3">Orange Stripe's Squared Coat</h5>
-                <p>Category</p>
+                <p>Coats</p>
                 <h6 class="mb-3">
                   <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
                 </h6>
@@ -128,7 +128,7 @@
                     class="badge bg-danger ms-2">-10%</span>
                 </h5>
                 <h5 class="card-title mb-3">Faux Fur Scarf</h5>
-                <p>Category</p>
+                <p>Scarves</p>
                 <h6 class="mb-3">$61.99</h6>
               </div>
             </article>
@@ -145,7 +145,7 @@
                     class="badge bg-danger ms-2">-10%</span>
                 </h5>
                 <h5 class="card-title mb-3">GG Marmont reversible belt</h5>
-                <p>Category</p>
+                <p>Belts</p>
                 <h6 class="mb-3">
                   <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
                 </h6>
@@ -165,7 +165,7 @@
               <div class="card__body">
                 <h5><span class="badge bg-primary ms-2">New</span></h5>
                 <h5 class="card-title mb-3">Jeans In Vintage Mid Blue</h5>
-                <p>Category</p>
+                <p>Jeans</p>
                 <h6 class="mb-3">$61.99</h6>
               </div>
             </article>
@@ -182,7 +182,7 @@
               <div class="card__body">
                 <h5><span class="badge bg-success ms-2">Eco</span></h5>
                 <h5 class="card-title mb-3">Regular Fit Ellerslie Linen Shirt</h5>
-                <p>Category</p>
+                <p>Shirts</p>
                 <h6 class="mb-3">$61.99</h6>
               </div>
             </article>
@@ -196,7 +196,7 @@
               <div class="card__body">
                 <h5><span class="badge bg-danger ms-2">-10%</span></h5>
                 <h5 class="card-title mb-3">Waisted Smokin' Short Fray</h5>
-                <p>Category</p>
+                <p>Shorts</p>
                 <h6 class="mb-3">
                   <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
                 </h6>
