--- a/pages/contact.html
+++ b/pages/contact.html
@@ -36,7 +36,7 @@
   <h1 class="clipped">Cheapestore</h1>
   <div class="container">
     <main>
-      <h2 class="title">CONTACT US</h2>
+      <h2 class="contact-title">CONTACT US</h2>
       <p class="paragraph">For immediate assistance, <strong>CHEAPESTORE.COM</strong> customers can contact us by email
         at <strong>customerservice@cheapestore.com</strong>, or by telephone Toll Free at
         <strong>1-866-420-9999</strong></p>
@@ -44,7 +44,7 @@
         customer service questions or problems.</p>
       <div>
         <section class="contact">
-          <form class="contact__form" action="" method="post">
+          <form class="contact__form" action="" method="">
             <div class="mb-3">
               <label for="fullName" class="form-label">Fullname</label>
               <input type="text" class="form-control" id="fullName">
@@ -58,8 +58,7 @@
               <textarea class="form-control" id="question" rows="3"></textarea>
             </div>
             <div>
-              <button type="submit" class="btn btn-primary"
-                style="color: #000; --bs-btn-color: #000; --bs-btn-border-color: #010;">Submit</button>
+              <button type="submit" class="custom-btn">Submit</button>
             </div>
           </form>
 
