--- a/pages/offers.html
+++ b/pages/offers.html
@@ -56,7 +56,7 @@
             <div class="card__body">
               <h5><span class="badge bg-primary ms-2">New</span></h5>
               <h5 class="card-title mb-3">Vintage Blue Pocket Overall</h5>
-              <p>Category</p>
+              <p>Overalls</p>
               <h6 class="mb-3">$61.99</h6>
             </div>
           </article>
@@ -71,7 +71,7 @@
             <div class="card__body">
               <h5><span class="badge bg-success ms-2">Eco</span></h5>
               <h5 class="card-title mb-3">Black & White Stripes Shirt</h5>
-              <p>Category</p>
+              <p>Shirts</p>
               <h6 class="mb-3">$61.99</h6>
             </div>
           </article>
@@ -85,7 +85,7 @@
             <div class="card__body">
               <h5><span class="badge bg-danger ms-2">-10%</span></h5>
               <h5 class="card-title mb-3">Jeans In Mid Blue With Rips</h5>
-              <p>Category</p>
+              <p>Jeans</p>
               <h6 class="mb-3">
                 <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
               </h6>
@@ -104,8 +104,8 @@
               <h5>
                 <span class="badge bg-success ms-2">Eco</span><span class="badge bg-danger ms-2">-10%</span>
               </h5>
-              <h5 class="card-title mb-3">Black Classic Chelsea Sholders</h5>
-              <p>Category</p>
+              <h5 class="card-title mb-3">Black Classic Chelsea Shoulders</h5>
+              <p>Shoulders</p>
               <h6 class="mb-3">
                 <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
               </h6>
@@ -125,7 +125,7 @@
                   class="badge bg-danger ms-2">-10%</span>
               </h5>
               <h5 class="card-title mb-3">Striped Print T-Shirt</h5>
-              <p>Category</p>
+              <p>T-Shirts</p>
               <h6 class="mb-3">$61.99</h6>
             </div>
           </article>
@@ -142,7 +142,7 @@
                   class="badge bg-danger ms-2">-10%</span>
               </h5>
               <h5 class="card-title mb-3">Classic Brooklyn Red Jacket</h5>
-              <p>Category</p>
+              <p>Jackets</p>
               <h6 class="mb-3">
                 <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
               </h6>
@@ -169,7 +169,7 @@
             <div class="card__body">
               <h5><span class="badge bg-primary ms-2">New</span></h5>
               <h5 class="card-title mb-3">Jeans In Vintage Mid Blue</h5>
-              <p>Category</p>
+              <p>Jeans</p>
               <h6 class="mb-3">$61.99</h6>
             </div>
           </article>
@@ -184,7 +184,7 @@
             <div class="card__body">
               <h5><span class="badge bg-success ms-2">Eco</span></h5>
               <h5 class="card-title mb-3">Regular Fit Ellerslie Linen Shirt</h5>
-              <p>Category</p>
+              <p>Shirts</p>
               <h6 class="mb-3">$61.99</h6>
             </div>
           </article>
@@ -198,7 +198,7 @@
             <div class="card__body">
               <h5><span class="badge bg-danger ms-2">-10%</span></h5>
               <h5 class="card-title mb-3">Waisted Smokin' Short Fray</h5>
-              <p>Category</p>
+              <p>Shorts</p>
               <h6 class="mb-3">
                 <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
               </h6>
@@ -218,7 +218,7 @@
                 <span class="badge bg-success ms-2">Eco</span><span class="badge bg-danger ms-2">-10%</span>
               </h5>
               <h5 class="card-title mb-3">Orange Stripe's Squared Coat</h5>
-              <p>Category</p>
+              <p>Coats</p>
               <h6 class="mb-3">
                 <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
               </h6>
@@ -238,7 +238,7 @@
                   class="badge bg-danger ms-2">-10%</span>
               </h5>
               <h5 class="card-title mb-3">Faux Fur Scarf</h5>
-              <p>Category</p>
+              <p>Scarves</p>
               <h6 class="mb-3">$61.99</h6>
             </div>
           </article>
@@ -255,7 +255,7 @@
                   class="badge bg-danger ms-2">-10%</span>
               </h5>
               <h5 class="card-title mb-3">GG Marmont reversible belt</h5>
-              <p>Category</p>
+              <p>Belts</p>
               <h6 class="mb-3">
                 <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
               </h6>
