--- a/pages/women.html
+++ b/pages/women.html
@@ -22,8 +22,10 @@
     <div class="header">
       <a class="logo" href="../index.html"><strong>CHEAPESTORE</strong></a>
       <input class="look-for" type="text" placeholder="Look for product, brand, category...">
-      <button class="custom-btn">Login</button>
-      <button href="" class="btn cart-btn"><i class="bi bi-cart" alt="shopping-cart-logo"></i></button>
+      <div>
+        <button class="custom-btn">Login</button>
+        <button href="" class="btn cart-btn"><i class="bi bi-cart" alt="shopping-cart-logo"></i></button>
+      </div>
     </div>
     <nav>
       <ul>
@@ -105,24 +107,20 @@
     </section>
     <section class="brands">
       <div class="brands__item">
-        <h3>Dress</h3>
-        <p>$300</p>
-        <p>3 interest-free fees of $300</p>
+        <img src="../images/brands/click-collect.svg" alt="click-collect" style="margin: 5px">
+        <p><strong>Click & collect</strong> FREE for orders over $15</p>
       </div>
       <div class="brands__item">
-        <h3>Dress</h3>
-        <p>$300</p>
-        <p>3 interest-free fees of $300</p>
+        <img src="../images/brands/standard-delivery.svg" alt="standard-delivery">
+        <p><strong>Standard delivery</strong> FREE for orders over $25</p>
       </div>
       <div class="brands__item">
-        <h3>Dress</h3>
-        <p>$300</p>
-        <p>3 interest-free fees of $300</p>
+        <img src="../images/brands/advantage-card.svg" alt="advantage-card">
+        <p><strong>Advantage Card</strong> Collect points & unlock Price Advantage offers</p>
       </div>
       <div class="brands__item">
-        <h3>Dress</h3>
-        <p>$300</p>
-        <p>3 interest-free fees of $300</p>
+        <img src="../images/brands/boots-app.svg" alt="boots-app">
+        <p><strong>Boots App</strong> Never miss out on unique offers</p>
       </div>
     </section>
     <section class="announcements">
