--- a/pages/offers.html
+++ b/pages/offers.html
@@ -20,8 +20,10 @@
     <div class="header">
       <a class="logo" href="../index.html"><strong>CHEAPESTORE</strong></a>
       <input class="look-for" type="text" placeholder="Look for product, brand, category...">
-      <button class="custom-btn">Login</button>
-      <button href="" class="btn cart-btn"><i class="bi bi-cart" alt="shopping-cart-logo"></i></button>
+      <div>
+        <button class="custom-btn">Login</button>
+        <button href="" class="btn cart-btn"><i class="bi bi-cart" alt="shopping-cart-logo"></i></button>
+      </div>
     </div>
     <nav>
       <ul>
